[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/cube.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/objects/DestroyableBlock.gd" type="Script" id=2]
[ext_resource path="res://addons/Godot-Utilities/Nodes/ExPhysicsBodyArea2D.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
custom_solver_bias = 1.0
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 0.501332 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.724138, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="DestroyableBlock" type="Sprite"]
texture = ExtResource( 1 )
centered = false
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 8, 8 )
collision_layer = 1
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 8, 8 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 2 )

[node name="StepArea" type="Area2D" parent="."]
visible = false
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="StepArea"]
position = Vector2( 8, -0.502815 )
shape = SubResource( 3 )

[node name="DestroyedParticles" type="CPUParticles2D" parent="."]
position = Vector2( 8, 8 )
scale = Vector2( 0.125, 0.125 )
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
texture = ExtResource( 1 )
spread = 180.0
gravity = Vector2( 0, 1000 )
initial_velocity = 500.0
color_ramp = SubResource( 4 )

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="texture_changed" from="." to="." method="_on_DestroyableBlock_texture_changed"]
[connection signal="body_entered" from="StepArea" to="." method="_on_StepArea_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="respawn"]
